add: guide.html

--- a/guide.html
+++ b/guide.html
@@ -9,219 +9,6 @@
     <title>Viral | 가이드</title>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
-    <style>
-
-        #home .guide .m-top140 {
-            margin-top: 9vw !important;
-        }
-
-        #home .guide .bg {
-            background: url(img/guide/bg.png) no-repeat;
-            background-position: bottom right;
-            background-size: cover;
-        }
-
-        #home .guide .title-real .main-title {
-            font-size: clamp(16px, 5vw, 60px);
-            font-weight: 600;
-            line-height: 120%;
-            font-style: normal;
-            text-align: center;
-        }
-
-        #home .guide .title-container {
-            width: 100%;
-            max-width: 1017px;
-            display: block;
-            margin: 0 auto;
-            margin-top: 11vw;
-        }
-
-        #home .guide .title-real {
-            width: 100%;
-            height: auto;
-            background-color: #fefefe;
-            border-color: #EFEAFF;
-            border-style: solid;
-            border-width: 4px;
-            padding: 1.8vw 0;
-            border-radius: 130px;
-            margin: 0 auto;
-            box-shadow: 0px 9px 34px 0px rgba(82, 40, 244, 0.2);
-        }
-
-        #home .guide .main-title .highlight-time {
-            color: #5228F4;
-        }
-
-        #home .guide .second-title-area {
-            width: 100%;
-            margin: 0 auto;
-            margin-bottom: 10px;
-            display: block;
-        }
-
-        #home .guide .second-title-area .sub-title {
-            font-size: clamp(22px, 7vw, 50px);
-            text-align: center;
-            font-weight: 500;
-        }
-
-        #home .guide .title-container .image-area {
-            margin: 0 auto;
-            width: 42%;
-        }
-
-        #home .guide .title-container .img-item {
-            width: 100%;
-            height: auto;
-        }
-
-        #home .guide .padding-group {
-            padding: 0 72px;
-            margin: 0 auto;
-        }
-
-        #home .guide .youtube-ai-container {
-            margin: 0 auto;
-            display: block;
-            text-align: center;
-            color: #5228F4;
-            font-size: clamp(16px, 3vw, 22px);
-            font-weight: 500;
-        }
-
-        #home .guide .youtube-ai-container .image-area {
-            display: flex;
-            justify-content: center;
-            gap: 24px;
-            margin-top: 3vw;
-        }
-
-        #home .guide .youtube-ai-container .content {
-            text-align: center;
-            font-size: 18px;
-            font-weight: normal;
-            color: #868686;
-            width: 100%;
-            max-width: 426px;
-            line-height: 140%;
-        }
-
-        #home .guide .youtube-ai-container .content .text {
-            margin-top: 1vw;
-            line-height: 160%;
-            font-size: clamp(14px, 2.5vw, 18px);
-        }
-
-        #home .guide .youtube-ai-container .img-item {
-            width: 100%;
-            height: auto;
-        }
-
-        #home .guide .star-score-container {
-            margin: 0 auto;
-            display: block;
-            text-align: center;
-            color: #5228F4;
-            font-size: clamp(16px, 3vw, 22px);
-            font-weight: 500;
-        }
-
-        #home .guide .star-score-container .content {
-            text-align: center;
-            font-size: clamp(14px, 2.5vw, 18px);
-            color: #868686;
-            font-weight: normal;
-            width: 100%;
-            max-width: 876px;
-            margin: 0 auto;
-            line-height: 140%;
-        }
-
-        #home .guide .star-score-container .img-item {
-            margin-top: 40px;
-            margin-bottom: 30px;
-            width: 100%;
-        }
-
-        #home .guide .template-container {
-            margin: 0 auto;
-            display: block;
-            text-align: center;
-            color: #5228F4;
-            font-size: clamp(16px, 3vw, 22px);
-            font-weight: 500;
-        }
-
-        #home .guide .template-container .content {
-            text-align: center;
-            font-size: clamp(14px, 2.5vw, 18px);
-            color: #868686;
-            font-weight: normal;
-            width: 100%;
-            max-width: 876px;
-            margin: 0 auto;
-            line-height: 140%;
-        }
-
-        #home .guide .template-container .img-item {
-            margin-top: 40px;
-            margin-bottom: 30px;
-            width: 100%;
-        }
-
-        #home .guide .end-bg {
-            background: url(img/guide/part-end.png) no-repeat;
-            background-position: bottom right;
-            background-size: cover;
-            width: 100%;
-            height: auto;
-        }
-
-        #home .guide .ending-container {
-            margin: 0 auto;
-            display: block;
-            text-align: center;
-            font-size: clamp(16px, 3vw, 22px);
-            font-weight: 500;
-            color: #292929;
-            line-height: 140%;
-
-        }
-
-        #home .guide .ending-container .bluetext {
-            color: #5228F4;
-            margin-bottom: 10px;
-        }
-
-        #home .guide .ending-container .finishBtn {
-            display: inline-flex;
-            align-items: center;
-            gap: 8px;
-            text-decoration: none;
-            padding: 15px 34px;
-            font-size: 16px;
-            line-height: 160%;
-            border: none;
-            border-radius: 10px;
-            color: #fefefe;
-            background-color: #5228F4;
-            cursor: pointer;
-            margin-top: 30px;
-        }
-
-        #home .guide .responsive-br {
-            display: none;
-        }
-
-        @media (max-width: 544px) {
-            #home .guide .responsive-br {
-                display: inline;
-            }
-        }
-    </style>
-
 </head>
 
 <body>
@@ -396,8 +183,9 @@
                                     </div>
                                     <div class="content">
                                         <img class="img-item" src="img/guide/part-aicut.png" alt="AI 컷">
-                                        <p class="text">흥미를 이끌 여러 구간을<span class="responsive-br"><br></span> AI가 보여줄
-                                            거예요.</p>
+                                        <p class="text">흥미를 이끌 여러 구간을
+                                            <span class="responsive-br">AI가 보여줄 거예요.</span>
+                                        </p>
                                     </div>
                                 </div>
                             </div>
@@ -405,8 +193,9 @@
                                 <p class="body-title">더 효과적인 선택을 할 수 있어요.</p>
                                 <div class="content">
                                     <img class="img-item" src="img/guide/part-starscore.png" alt="별점">
-                                    <p class="text">높은 별점을 받은 영상을 선택하고,<span class="responsive-br"><br></span> 제목과 자막을
-                                        꾸며보세요.</p>
+                                    <p class="text">높은 별점을 받은 영상을 선택하고,
+                                        <span class="responsive-br">제목과 자막을 꾸며보세요.</span> 
+                                    </p>                                 
                                 </div>
                             </div>
                             <div class="template-container m-top140">
@@ -414,7 +203,8 @@
                                 <div class="content">
                                     <img class="img-item" src="img/guide/part-templete.png" alt="템플릿">
                                     <p class="text">
-                                        자주 사용할 템플릿을 만들어,<span class="responsive-br"><br></span> 더 효율적인 작업을 할 수 있어요.
+                                        자주 사용할 템플릿을 만들어,
+                                        <span class="responsive-br">더 효율적인 작업을 할 수 있어요.</span>
                                     </p>
                                 </div>
                             </div>
