--- a/sample.html
+++ b/sample.html
@@ -153,8 +153,9 @@
                 <!-- 컨텐츠 영역 -->
                 <section class="content-area">
                     <article class="content-wrap">
-                        <div class="content-inner making-inner">
-                            
+                        <div class="content-inner making-inner"> <!-- making-inner >> 작업자의 고유 클래스명으로 바꿔주세요 -->
+                            <!-- 작업 영역 -->
+                            <!-- // 작업 영역 ~ -->
                         </div>
                     </article>
                 </section>
